--- a/theme.css
+++ b/theme.css
@@ -1,6 +1,6 @@
 *{text-align:center;}
-#card{margin:20px auto;border:1px solid black;width:50%;padding:10px}
-ul{list-style-type:none;padding:0;margin:0;}
+#card{margin:20px auto;border:1px solid black;width:70%;padding:10px}
+ul{;list-style-type:none;padding:0;margin:0;}
 li{margin:15px 0;}
 .even{color:red;}
 .odd{color:green;}
@@ -8,13 +8,13 @@ li{margin:15px 0;}
 
 
 @media screen and (min-width: 601px) {
-  #card{width:35%}
+  #card{width:40%}
 }
 
 @media screen and (min-width: 801px) {
-  #card{width:25%}
+  #card{width:35%}
 }
 
 @media screen and (min-width: 1000px) {
-  #card{width:20%}
+  #card{width:30%}
 }
