--- a/theme.css
+++ b/theme.css
@@ -1,11 +1,13 @@
+html{background-color:#8c3300;}
 *{text-align:center;}
-#card{margin:20px auto;border:1px solid black;width:70%;padding:10px}
-ul{;list-style-type:none;padding:0;margin:0;}
+#card{margin:20px auto;border:5px solid black;background-color:#efb999;width:70%;padding:10px}
+ul{list-style-type:none;padding:0;margin:0;}
 li{margin:15px 0;}
 .even{color:red;}
 .odd{color:green;}
 .nextButton{font-size:2em;}
 
+#heading{color:white;}
 
 @media screen and (min-width: 601px) {
   #card{width:40%}
