--- a/theme.css
+++ b/theme.css
@@ -1,22 +1,27 @@
 html{background-color:#8c3300;}
 *{text-align:center;}
-#card{margin:20px auto;border:5px solid black;background-color:#efb999;width:70%;padding:10px}
+
+#card, #number{margin:0px auto; width:70%;}
+#card{border-radius: 25px;margin-bottom:20px;border:4px solid black;background-color:#efb999;padding:2px;}
+#number{text-align:right;}
+
 ul{list-style-type:none;padding:0;margin:0;}
 li{margin:15px 0;}
 .even{color:red;}
 .odd{color:green;}
-.nextButton{font-size:2em;}
+input[type=button]{font-size:1.5em;background-color:lightgray;border:0;border-radius:10px;padding:5px 15px;display:inline-block;}
+p a{color:#efb999}
 
-#heading{color:white;}
+h1{color:white;margin-bottom:0;}
 
 @media screen and (min-width: 601px) {
-  #card{width:40%}
+  #card, #number{width:40%}
 }
 
 @media screen and (min-width: 801px) {
-  #card{width:35%}
+  #card, #number{width:35%}
 }
 
 @media screen and (min-width: 1000px) {
-  #card{width:30%}
+  #card, #number{width:25%}
 }
